# monitor_dimmer

./: .gitignore  CMakeLists.txt  README.md
installer/: installer.nsi  license.rtf  time_lapse_rec.nsi
src/: BackEnd.cpp  BackEnd.h  Screen.cpp  Screen.h  ScreenList.cpp  ScreenList.h  lib.cpp  lib.h  main.cpp  pch.h  qtquickcontrols2.conf  res.h  res.qrc  res.rc  ui.qml
src/Components/: Appbutton.qml
src/imports/Theme/: Theme.qml
